--- a/notebooks/_static/style_common.css
+++ b/notebooks/_static/style_common.css
@@ -15,6 +15,7 @@
     .bd-page-width {
         max-width: initial !important;
     }
+
     /* but keep the upper-left logo to grow too much */
     .navbar-brand.logo>img {
         max-width: 250px;
@@ -33,6 +34,7 @@
     margin-bottom: 0.5em !important;
     margin-top: 0.5em !important;
 }
+
 .myst :where(:is(p, ul)):not(:where([class~=not-prose], [class~=not-prose] *)) {
     margin-bottom: 0.5em !important;
     margin-top: 0.5em !important;
@@ -48,6 +50,7 @@
 :is(.bd-container, .myst) p:has(+ :is(ol, ul)) {
     margin-bottom: initial !important;
 }
+
 :is(.bd-container, .myst) li>ul {
     margin-top: 0.1em !important;
 }
@@ -58,10 +61,14 @@ div.cell div.cell_output .output pre {
     background-color: #f8fff8 !important;
     border: 0.3px solid blue !important;
 }
+
+html[data-theme='dark'] div.cell div.cell_output .output pre {
+    background-color: #064b06 !important;
+}
+
 div.prompt.input_prompt, div.prompt.output_prompt {
     opacity: 0.6;
 }
-
 
 /* jupyterlab-myst and tables */
 :is(.bd-container, .myst) table td {
@@ -77,9 +84,22 @@ div.prompt.input_prompt, div.prompt.output_prompt {
 }
 
 :is(.bd-container, .myst) table :is(thead, tfoot) tr {
-    background-color: #f8f8f8
+    background-color: #f8f8f8;
 }
 
+html[data-theme='dark'] {
+    & :is(.bd-container, .myst) table tbody tr:nth-child(odd) {
+        background-color: #020202;
+    }
+
+    & :is(.bd-container, .myst) table tbody tr:nth-child(even) {
+        background-color: #040404;
+    }
+
+    & :is(.bd-container, .myst) table :is(thead, tfoot) tr {
+        background-color: #080808;
+    }
+}
 
 /* space before admonitions */
 :is(.bd-container, .myst) div.admonition>.admonition-title+* {
@@ -91,10 +111,12 @@ div.prompt.input_prompt, div.prompt.output_prompt {
     font-size: smaller;
     line-height: 1.2;
 }
+
 .admonition-small {
     font-size: small;
     line-height: 1.2;
 }
+
 .admonition-x-small {
     font-size: x-small;
     line-height: 1.2;
@@ -102,5 +124,9 @@ div.prompt.input_prompt, div.prompt.output_prompt {
 
 /* slight gradient for corriges */
 .corrige {
-    background-image: radial-gradient(#BFF6C3, #E0FBE2);
+    background-image: radial-gradient(circle at top left, #d1effa, #e2f9cd);
+}
+
+html[data-theme='dark'] .corrige {
+    background-image: radial-gradient(circle at top left, #0e3852, #0c5517);
 }
